--- a/styles/noticias.css
+++ b/styles/noticias.css
@@ -43,6 +43,7 @@
 .noticia__imagem {
     border: 2px solid #929292;
     border-radius: 8px;
+    width: 100%;
 }
 
 .noticia__imagem:nth-of-type(2) {
