--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .rodape {
     padding: 2em;
     text-align: center;
@@ -22,7 +24,7 @@
 }
 
 .lista__item {
-    padding: .5em;
+    padding: .5em 0;
     text-align: left;
 }
 
@@ -37,6 +39,12 @@
 
 .lista__item-link:hover {
     color: var(--background-secundario);
+}
+
+.rodape__descricao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .rodape__local-link {
@@ -59,6 +67,12 @@
 
 .rodape__logo__ama {
     width: 100%;
+}
+
+@media screen and (min-width: 415px) {  
+    .rodape__logo__ama {
+        width: 16.625rem;
+    }
 }
 
 @media screen and (min-width: 1024px) {
