mudanças do local de endereçamento do resetcss

--- a/components/pages/noticias/noticias.html
+++ b/components/pages/noticias/noticias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias da AMA Itapoá</title>
     <link href="../../../styles/alt_styles/hamburgers.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../styles/alt_styles/resetcss.css">
+    <link rel="stylesheet" href="../../../resetcss.css">
     <link rel="stylesheet" href="../../../styles/header.css">
     <link rel="stylesheet" href="../../../styles/rodape.css">
     <link rel="stylesheet" href="components\pages\noticias\noticiasDaAMA.css">
