--- a/components/pages/noticias/noticias.html
+++ b/components/pages/noticias/noticias.html
@@ -19,16 +19,16 @@
 <body>
     <header class="cabecalho">
         <div class="cabecalho__logo container">
-            <a href="index.html" class="logo__cabecalho-mob"><img src="../../../img/Logo-Ama mob.png"
+            <a href="../../../index.html" class="logo__cabecalho-mob"><img src="../../../img/Logo-Ama mob.png"
                     alt="Logo da AMA Itapoá"></a>
-            <a href="index.html" class="logo__cabecalho-desktop"><img src="../../../img/ama-logo-header.png"
+            <a href="../../../index.html" class="logo__cabecalho-desktop"><img src="../../../img/ama-logo-header.png"
                     alt="Logo da AMA Itapoá"></a>
         </div>
         <nav class="cabecalho__nav container">
             <nav class="nav__container-desktop">
-                <a href="index.html" class="pages__link-desktop">HOME</a>
+                <a href="../../../index.html" class="pages__link-desktop">HOME</a>
                 <a href="" class="pages__link-desktop">AMA</a>
-                <a href="" class="pages__link-desktop">NOTÍCIAS</a>
+                <a href="noticias.html" class="pages__link-desktop">NOTÍCIAS</a>
                 <a href="" class="pages__link-desktop">FOTOS</a>
                 <a href="" target="_blank" class="pages__link-desktop">SOBRE O AUTISMO</a>
                 <a href="" target="_blank" class="pages__link-desktop">CONTATO</a>
@@ -45,13 +45,13 @@
             <ul class="nav__pages">
                 <li class="pages__item-titulo">Menu</li>
                 <li class="pages__item">
-                    <a href="index.html" class="pages__item-link">Home</a>
+                    <a href="../../../index.html" class="pages__item-link">Home</a>
                 </li>
                 <li class="pages__item">
                     <a href="#" class="pages__item-link">AMA</a>
                 </li>
                 <li class="pages__item">
-                    <a href="#" class="pages__item-link">Notícias</a>
+                    <a href="noticias.html" class="pages__item-link">Notícias</a>
                 </li>
                 <li class="pages__item">
                     <a href="#" class="pages__item-link">Fotos</a>
